# OxideTerm

./: .gitattributes  .gitignore  AGENTS.md  README.fr.md  README.md  README.zh-CN.md  TOPOLOGY_EXAMPLE.md  index.html  migrate-to-new-repo.sh  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
agent/: Cargo.toml  THIRD_PARTY_NOTICES.md  deny.toml
agent/scripts/: generate-third-party-notices.cjs
agent/src/: fs_ops.rs  main.rs  protocol.rs  watcher.rs
agents/: README.md
agents/extra/: README.md  oxideterm-agent-aarch64-android  oxideterm-agent-arm-linux-musleabihf  oxideterm-agent-armv7-linux-musleabihf  oxideterm-agent-i686-linux-musl  oxideterm-agent-loongarch64-linux-gnu  oxideterm-agent-powerpc64le-linux-gnu  oxideterm-agent-riscv64gc-linux-gnu  oxideterm-agent-s390x-linux-gnu  oxideterm-agent-x86_64-freebsd
docs/: AI_INLINE_CHAT.md  AI_SIDEBAR_CHAT.md  ARCHITECTURE.md  CONNECTION_POOL.md  DEVELOPMENT.md  FRONTEND_SPEC.md  FUTURE_OPTIMIZATIONS.md  GRAPHICS_FORWARDING.zh-CN.md  I18N.md  IDE_MODE.md  LOCAL_TERMINAL.md  NETWORK_TOPOLOGY.md  PERSISTENCE_AUDIT.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM.md  PORT_FORWARDING.md  PROTOCOL.md  RECONNECT_ORCHESTRATOR_PLAN.md  REDESIGN_PLAN.md  REFINEMENT_PLAN.md  REMOTE_AGENT.md  SERIALIZATION.md  SESSION_MANAGER.md  SFTP.md  SSH_AGENT_STATUS.md  SSH_CONNECTION_POOL.md  SYSTEM_INVARIANTS.md  TERMINAL_SEARCH.md  USER_GUIDE.md  WINDOWS_OPTIMIZATION_ROADMAP.md  ui-overhaul-plan.md
docs/changelog/: 2026-02.md
public/fonts/: README.md
scripts/: build-agent.sh  generate-third-party-notices.cjs
src/: App.tsx  THIRD_PARTY_NOTICES.md  i18n.ts  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  THIRD_PARTY_NOTICES.md  deny.toml  icon.htm  tauri.conf.json
src-tauri/agents/: oxideterm-agent-aarch64-linux-musl  oxideterm-agent-x86_64-linux-musl
src-tauri/benches/: buffer_benchmark.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: check-license-policy.cjs  generate-third-party-notices.cjs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: deploy.rs  mod.rs  protocol.rs  registry.rs  transport.rs
src-tauri/src/bridge/: manager.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/commands/: ai_chat.rs  config.rs  connect.rs  connect_v2.rs  connect_v2.rs.backup  connection.rs  forwarding.rs  health.rs  ide.rs  kbi.rs  local.rs  mod.rs  network.rs  node_agent.rs  node_sftp.rs  oxide_export.rs  oxide_import.rs  plugin.rs  scroll.rs  session.rs  session_tree.rs  sftp.rs  ssh.rs  terminal_session.rs
src-tauri/src/config/: keychain.rs  mod.rs  ssh_config.rs  storage.rs  types.rs  vault.rs
src-tauri/src/forwarding/: dynamic.rs  local.rs  manager.rs  mod.rs  remote.rs
src-tauri/src/graphics/: bridge.rs  commands.rs  mod.rs  wsl.rs
src-tauri/src/launcher/: macos.rs  mod.rs
src-tauri/src/local/: mod.rs  pty.rs  registry.rs  session.rs  shell.rs
src-tauri/src/oxide_file/: crypto.rs  error.rs  format.rs  mod.rs
src-tauri/src/router/: mod.rs
src-tauri/src/session/: auth.rs  auto_reconnect.rs  events.rs  health.rs  mod.rs  parser.rs  profiler.rs  reconnect.rs  registry.rs  scroll_buffer.rs  search.rs  state.rs  topology_graph.rs  tree.rs  types.rs
src-tauri/src/sftp/: error.rs  mod.rs  path_utils.rs  progress.rs  retry.rs  session.rs  transfer.rs  types.rs
src-tauri/src/ssh/: agent.rs  client.rs  config.rs  connection_manager.rs  connection_registry.rs  error.rs  handle_owner.rs  keyboard_interactive.rs  known_hosts.rs  mod.rs  preflight.rs  proxy.rs  session.rs
src-tauri/src/state/: ai_chat.rs  forwarding.rs  mod.rs  session.rs  store.rs
src/components/: ConnectModal.tsx  ConnectionFormModal.tsx  ConnectionHealthIndicator.tsx  ConnectionList.tsx  ErrorBoundary.tsx  PortForwardingPanel.tsx  SftpDrawer.tsx  Sidebar.tsx  TabBar.tsx  TerminalContainer.tsx  TerminalContextMenu.tsx  TerminalSearchBar.tsx  TerminalSettings.tsx  TerminalView.tsx  ThemeSwitcher.tsx  TitleBar.tsx  index.ts
src/components/ai/: AiChatPanel.tsx  ChatInput.tsx  ChatMessage.tsx  ContextIndicator.tsx
src/components/connections/: ConnectionCard.tsx  ConnectionForm.tsx  ConnectionList.tsx  ConnectionPoolMonitor.tsx  ConnectionsPanel.tsx  QuickConnect.tsx  index.ts
src/components/editor/: RemoteFileEditor.tsx
src/components/fileManager/: AudioVisualizer.tsx  CodeHighlight.tsx  FileList.tsx  FileOperationProgress.tsx  FilePropertiesDialog.tsx  types.ts  (+5 more)
src/hooks/: useConnectionEvents.ts  useForwardEvents.ts  useKeyboardShortcuts.tsx  useNetworkStatus.ts  useNodeState.ts  usePortDetection.ts  useReconnectEvents.ts  useTerminalKeyboard.ts  useTerminalRecording.ts  useToast.ts
src/lib/: agentService.ts  animations.ts  api.ts  cn.ts  config.ts  connectToSaved.ts  fontFamily.ts  index.ts  platform.ts  protocol.ts  safeUrl.ts  sftp.ts  sidebarContextProvider.ts  terminalRegistry.ts  themeManager.ts  themes.ts  topologyResolver.ts  topologyUtils.ts  utils.ts
src/store/: aiChatStore.ts  appStore.ts  ideStore.ts  index.ts  launcherStore.ts  localTerminalStore.ts  pluginStore.ts  profilerStore.ts  reconnectOrchestratorStore.ts  recordingStore.ts  sessionStore.ts  sessionStoreV2.ts  sessionTreeStore.ts  settingsStore.ts  terminalConfigStore.ts  transferStore.ts
src/stores/: sftpStore.ts  themeStore.ts
src/styles/: variables.css
src/types/: index.ts  plugin.ts  session.ts  sftp.ts  ssh.ts
(+327 files in other folders)
