[package]
name = "oxideterm"
version = "0.3.0"
description = "A modern SSH terminal client built with Rust and Tauri"
authors = ["OxideTerm Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oxideterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bench]]
name = "buffer_benchmark"
harness = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# SSH Protocol
russh = "0.48"
russh-keys = "0.48"
russh-sftp = "2"

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Binary Protocol
bytes = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
async-trait = "0.1"

# Session Management
dashmap = "6"
dirs = "5"

# Config & Keychain
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
whoami = "1"

# SFTP
base64 = "0.22"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
glob = "0.3"
tauri-plugin-fs = "2.4.5"

# Utilities
once_cell = "1"

# Persistence Layer
redb = "2.1"
bincode = "1.3"

# Encryption & Security
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
sha2 = "0.10"
zeroize = "1.7"
rand = "0.8"

# Terminal & Search
vte = "0.13"
regex = "1.10"
strip-ansi-escapes = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
# 1. 链接时优化 (LTO)
# 消除跨 crate 的冗余代码，能显著减小体积并提升性能
lto = "fat"
strip = false
panic = "abort"
opt-level = 3
[package.metadata.cargo-deny]
# 禁止GPL/AGPL进入依赖树
[metadata.cargo-deny.bans]
deny = [
    { name = "*", license = "GPL-2.0" },
    { name = "*", license = "GPL-3.0" },
    { name = "*", license = "AGPL-3.0" },
]